--- a/src/index.html
+++ b/src/index.html
@@ -7,13 +7,19 @@
     <link rel="icon" type="image/png" href="favicon.png" />
     <meta name="description" content="Catundercover portfolio website">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <base href="/">
 </head>
 <body>
-    <cat-under-cover></cat-under-cover>
+    <catundercover></catundercover>
+
+    <script src="vendor/npm/core-js@2.4.0/client/core.min.js"></script>
+
+    <script src="vendor/npm/zone.js@0.6.12/dist/zone.js"></script>
+    <script src="vendor/npm/reflect-metadata@0.1.3/Reflect.js"></script>
+
     <script src="vendor/system.js"></script>
-    <script src="config.system.js"></script>
-    <script src="vendor/npm/angular2@2.0.0-beta.17/bundles/angular2-polyfills.js"></script>
-    <script src="vendor/npm/angular2@2.0.0-beta.17/bundles/angular2.js"></script>
-    <script src="bootstrap.js"></script>
+    <script src="jspm.config.js"></script>
+
+    <script src="index.js"></script>
 </body>
 </html>
