--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>Catundercover portfolio</title>
     <link rel="icon" type="image/png" href="favicon.png" />
+    <link href="vendor/npm/lightbox2@2.8.2/dist/css/lightbox.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:400,600,700" rel="stylesheet">
     <meta name="description" content="Catundercover portfolio website">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <base href="/">
@@ -13,6 +16,16 @@
     <catundercover></catundercover>
 
     <script src="vendor/npm/core-js@2.4.0/client/core.min.js"></script>
+    <script src="vendor/npm/lightbox2@2.8.2/dist/js/lightbox-plus-jquery.min.js"></script>
+
+    <script>
+        window.lightbox.option({
+            wrapAround: true,
+            disableScrolling: true,
+            fadeDuration: 100,
+            resizeDuration: 100
+        })
+    </script>
 
     <script src="vendor/npm/zone.js@0.6.12/dist/zone.js"></script>
     <script src="vendor/npm/reflect-metadata@0.1.3/Reflect.js"></script>
