--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" type="image/png" href="favicon.png" />
     <link href="vendor/npm/lightbox2@2.8.2/dist/css/lightbox.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:400,600,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,400,600,700" rel="stylesheet">
     <meta name="description" content="Catundercover portfolio website">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <base href="/">
@@ -30,7 +30,7 @@
     <script src="vendor/npm/zone.js@0.6.12/dist/zone.js"></script>
     <script src="vendor/npm/reflect-metadata@0.1.8/Reflect.js"></script>
 
-    <script src="vendor/system.js"></script>
+    <script src="vendor/system.src.js"></script>
     <script src="jspm.config.js"></script>
 
     <script src="index.js"></script>
