Upgrades to ANGULAR RC6

--- a/src/index.html
+++ b/src/index.html
@@ -13,9 +13,9 @@
     <base href="/">
 </head>
 <body>
-    <catundercover></catundercover>
+    <app></app>
 
-    <script src="vendor/npm/core-js@2.4.0/client/core.min.js"></script>
+    <script src="vendor/npm/core-js@2.4.1/client/core.min.js"></script>
     <script src="vendor/npm/lightbox2@2.8.2/dist/js/lightbox-plus-jquery.min.js"></script>
 
     <script>
@@ -27,7 +27,7 @@
         })
     </script>
 
-    <script src="vendor/npm/zone.js@0.6.12/dist/zone.js"></script>
+    <script src="vendor/npm/zone.js@0.6.21/dist/zone.min.js"></script>
     <script src="vendor/npm/reflect-metadata@0.1.8/Reflect.js"></script>
 
     <script src="vendor/system.src.js"></script>
