--- a/src/index.html
+++ b/src/index.html
@@ -10,11 +10,82 @@
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,400,600,700" rel="stylesheet">
     <meta name="description" content="Catundercover portfolio website">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <style>
+        app {visibility: hidden;}
+        #app-spinner-outer {
+            width: 100%;
+            height: 100%;
+            min-height: 300px;
+            position: absolute;
+            top: 0;
+            left: 0;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            z-index: 1000;
+            background-color: white;
+        }
+
+        #app-spinner {
+            margin: 100px auto 0;
+            width: 70px;
+            text-align: center;
+        }
+
+        #app-spinner > div {
+            width: 10px;
+            height: 10px;
+            background-color: #333;
+            margin-left: 5px;
+            border-radius: 100%;
+            display: inline-block;
+            -webkit-animation: sk-bouncedelay 1.4s infinite ease-in-out both;
+            animation: sk-bouncedelay 1.4s infinite ease-in-out both;
+        }
+
+        #app-spinner .bounce1 {
+            -webkit-animation-delay: -0.32s;
+            animation-delay: -0.32s;
+            background-color: #ec585b;
+        }
+
+        #app-spinner .bounce2 {
+            -webkit-animation-delay: -0.16s;
+            animation-delay: -0.16s;
+            background-color: #f3c444;
+        }
+
+        #app-spinner .bounce3 {
+            background-color: #44bccb;
+        }
+
+
+        @-webkit-keyframes sk-bouncedelay {
+            0%, 80%, 100% { -webkit-transform: scale(0) }
+            40% { -webkit-transform: scale(1.0) }
+        }
+
+        @keyframes sk-bouncedelay {
+            0%, 80%, 100% {
+                -webkit-transform: scale(0);
+                transform: scale(0);
+            } 40% {
+                -webkit-transform: scale(1.0);
+                transform: scale(1.0);
+            }
+        }
+    </style>
     <base href="/">
 </head>
 <body>
     <app></app>
-
+    <div id="app-spinner-outer">
+        <div id="app-spinner">
+            <div class="bounce1"></div>
+            <div class="bounce2"></div>
+            <div class="bounce3"></div>
+        </div>
+    </div>
     <script src="vendor/npm/core-js@2.4.1/client/core.min.js"></script>
     <script src="vendor/npm/lightbox2@2.8.2/dist/js/lightbox-plus-jquery.min.js"></script>
 
