Adds tedx portfolio item

--- a/src/index.html
+++ b/src/index.html
@@ -87,10 +87,14 @@
         </div>
     </div>
     <script src="vendor/npm/core-js@2.4.1/client/core.min.js"></script>
+    <script src="vendor/npm/imagesloaded@4.1.1/imagesloaded.pkgd.min.js"></script>
+    <script src="vendor/npm/isotope-layout@3.0.1/dist/isotope.pkgd.min.js"></script>
     <script src="vendor/npm/lightbox2@2.8.2/dist/js/lightbox-plus-jquery.min.js"></script>
 
     <script>
         window.lightbox.option({
+            alwaysShowNavOnTouchDevices: true,
+            showImageNumberLabel: false,
             wrapAround: true,
             disableScrolling: true,
             fadeDuration: 100,
